# FabLabOnline

./: .dockerignore  .gitignore  DEVELOPMENT_WORKFLOW.md  Dockerfile  Dockerfile.admin-web  README.md  VSCode终端问题解决指南.md  build.py  docker-compose.yml  index.html  main.py  manage.py  nginx-frontend.conf  nginx-ssl.conf  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  开发计划文档.md
.agent/: coding_agent.md  initializer_agent.md
.agent/templates/: project_config.json
.memory/: MEMORY_P0.md  MEMORY_P1.md  README.md  SESSION_START.md
.memory/P2/: archive_2026-02.md
.skills/: algorithm_debugging.md  ppt_layout_calculation.md  ppt_text_processing.md  skill_index.json
PPTGenerator/: PPT模板分析报告.md  README.md  TEST_GUIDE.md  法贝实验室课程反馈助手.spec
admin-web/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
config/: colors.json  settings.json  settings.py
docs/: BUILD_DEPLOY.md  CHANGELOG.md  DATA_SYNC.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  EXPERIENCE_NOTES.md  PROJECT_OVERVIEW.md  TEMPLATE_SPEC.md
fablab_sdk/: __init__.py  client.py  tracking.py
infrastructure/: metrics.py
migrations/: env.py
models/: __init__.py  base.py  campus.py  event.py  session.py  user.py
scripts/: backup-db.sh  deploy.sh  renew-cert.sh  restore-db.sh  setup-https.sh  smoke-test.sh
src/: __init__.py
templates/: 课程反馈.pptx
tests/: conftest.py  test_event_tracker.py  test_manage.py  test_models.py  test_models_base.py
后端/: .env.example  alembic.ini  init_db.py  main.py  manage.py  requirements.txt
(+264 files in other folders)
